
2004-01-19  Jeremy Maitin-Shepard  <jbms@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Use site-gentoo.el,
	rather than site-start.el.

2003-11-03  Matthew Kennedy  <mkennedy@gentoo.org>

	* elisp-common.eclass (elisp-comp): Add an alternate compilation
	function.

2003-10-06  Jeremy Maitin-Shepard  <jbms@attbi.com>

	* elisp.eclass: Removed unnecessary sourcing of
	elisp-common.eclass. Define S="${WORKDIR}/" only if SIMPLE_ELISP
	is set to t.
	(elisp_src_unpack, elisp_src_compile, elisp_src_install)
	(elisp_pkg_postinst, elisp_pkg_postrm): Renamed src_unpack,
	src_compile, etc. to elisp_src_unpack and added a call to
	EXPORT_FUNCTIONS so that it works better with the inheritance
	system. Bug #29698.

	* elisp-common.eclass (elisp-compile): Added function, bug #29698.

2003-09-21  Matthew Kennedy  <mkennedy@gentoo.org>

	* elisp.eclass, elisp-common.eclass: Separated elisp into elisp
	and elisp-common.

	* elisp.eclass: Removed default depend.

2003-07-22  George Shapovalov  <george@gentoo.org>

	* elisp.eclass: Fixed DEPEND.

2003-05-23  Matthew Kennedy  <mkennedy@gentoo.org>

	* elisp.eclass (src_unpack, src_compile, src_install)
	(pkg_postinst, pkg_postrm): Improvements to make most app emacs
	ebuilds mode succinct.

2003-02-09  Matthew Kennedy  <mkennedy@gentoo.org>

	* elisp.eclass (elisp-site-regen): Made the file search more
	robust as per Sascha Luedecke <sascha@meta-x.de> suggestion in
	bug #13277.

2002-10-29  Matthew Kennedy  <mkennedy@gentoo.org>

	* elisp.eclass: Initial.

Copyright 2002-2012 Gentoo Foundation
Distributed under the terms of the GNU General Public License v2

  04 Sep 2013; Ulrich Müller <ulm@gentoo.org> elisp-common.eclass:
  Add proper @CODE tags in comments.

  24 Aug 2012; Ulrich Müller <ulm@gentoo.org> elisp-common.eclass:
  Suppress warning for initial installation.

  18 Jul 2012; Ulrich Müller <ulm@gentoo.org> elisp-common.eclass:
  Sync from Portage tree: Make use of the @ROFF token in documentation.
